fix: remove unused skills

--- a/index.html
+++ b/index.html
@@ -293,6 +293,13 @@
         >
           <i class="devicon-java-plain colored skills"></i>
         </a>
+        <a
+          href="https://www.golang.org"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="devicon-go-plain colored skills"></i>
+        </a>
         <a href="https://ocaml.org/" target="_blank" rel="noopener noreferrer">
           <i class="devicon-ocaml-plain colored skills"></i>
         </a>
@@ -303,41 +310,13 @@
         >
           <i class="devicon-elixir-plain colored skills"></i>
         </a>
-        <a
-          href="https://www.golang.org"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="devicon-go-line colored skills"></i>
-        </a>
-        <a
-          href="https://www.python.org/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="devicon-python-plain colored skills"></i>
-        </a>
-        <a
-          href="https://www.cplusplus.com/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="devicon-cplusplus-plain colored skills"></i>
-        </a>
-        <a
-          href="https://www.tutorialspoint.com/cprogramming/index.htm"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="devicon-c-plain colored skills"></i>
-        </a>
       </div>
       <p class="placeholder-text">
         * I believe that knowing the fundementals of programming fundementals is
         more important than trying to learn different syntaxes. As knowing the
         fundementals concepts can help learn different languages faster.
       </p>
-      <span class="heading-4">Web Frameworks and Libraries</span>
+      <span class="heading-4">Web Frameworks</span>
       <div class="my-container">
         <a
           href="https://expressjs.com"
@@ -345,13 +324,6 @@
           rel="noopener noreferrer"
         >
           <i class="devicon-express-original colored skills"></i>
-        </a>
-        <a
-          href="https://www.phoenixframework.org/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="devicon-phoenix-plain colored skills"></i>
         </a>
         <a
           href="https://reactjs.org/"
@@ -367,25 +339,11 @@
           <i class="devicon-svelte-plain colored skills"></i>
         </a>
         <a
-          href="https://getbootstrap.com/"
+          href="https://www.phoenixframework.org/"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <i class="devicon-bootstrap-plain colored skills"></i>
-        </a>
-        <a
-          href="https://tailwindcss.com/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="devicon-tailwindcss-plain colored skills"></i>
-        </a>
-        <a
-          href="https://material-ui.com/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="devicon-materialui-plain colored skills"></i>
+          <i class="devicon-phoenix-plain colored skills"></i>
         </a>
       </div>
       <span class="heading-4">Databases*</span>
@@ -403,13 +361,6 @@
           rel="noopener noreferrer"
         >
           <i class="devicon-mysql-plain colored skills"></i>
-        </a>
-        <a
-          href="https://www.microsoft.com/en-ca/sql-server/sql-server-2019"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="devicon-microsoftsqlserver-plain colored skills"></i>
         </a>
         <a
           href="https://aws.amazon.com/dynamodb/"
