feat: update info

--- a/index.html
+++ b/index.html
@@ -87,12 +87,10 @@
         Welcome to my personal website! Here, you can find out about my
         <a href="#education">education</a>, <a href="#skills">skills</a>,
         <a href="#hackathons">hackathons</a>, and
-        <a href="#projects">projects</a>. I'm currently working for
-        <a
-          href="http://aws.amazon.com"
-          target="_blank"
-          rel="noopener noreferrer"
-          >@aws</a
+        <a href="#projects">projects</a>. I'm currently purusing my Bachelor of
+        Computer Science at
+        <a href="https://www.sfu.ca/" target="_blank" rel="noopener noreferrer"
+          >Simon Fraser University</a
         >. Here's my <a href="./resume.pdf">resume</a>.
       </p>
     </section>
@@ -100,45 +98,71 @@
     <section id="education">
       <span class="heading-2">Education</span>
       <p>
-        I graduated from BCIT's Computer System Technology program back in June
-        2021. Overall, it was an awesome experience. I met a lot of cool people
-        and learnt a lot of interesting things.
+        I'm currently studying Computer Science at SFU after working for a few
+        years. My expected graduation date is in 2027. I'm hoping to learn more
+        about distributed systems, and low level stuffs during my time here.
       </p>
       <p>
-        I took the Programming Paradigm option in my second year. I used OCaml,
-        Elixir, and Golang. In the end, it really changed my coding styles and
-        practices.
+        Previously, I also graduated from BCIT (CST - Programming Paradigm
+        option) in 2021.
       </p>
-      <a
-        href="https://www.bcit.ca/programs/computer-systems-technology-diploma-full-time-5500dipma/"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        <img class="thumbnail" src="./images/bcit.png" alt="Card image cap" />
-      </a>
-      <p class="placeholder-text">Class of 2021 - GPA: 91%</p>
+      <div class="my-container companies-spacer">
+        <div>
+          <a
+            href="https://www.sfu.ca/computing.html"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              class="thumbnail"
+              src="./images/sfu.png"
+              alt="Card image cap"
+            />
+          </a>
+          <p class="placeholder-text">Class of 2027</p>
+        </div>
+        <div>
+          <a
+            href="https://www.bcit.ca/programs/computer-systems-technology-diploma-full-time-5500dipma/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              class="thumbnail"
+              src="./images/bcit.png"
+              alt="Card image cap"
+            />
+          </a>
+          <p class="placeholder-text">Class of 2021 - GPA: 91%</p>
+        </div>
+      </div>
     </section>
 
     <section id="experience">
       <span class="heading-2">Work Experience</span>
       <p>
-        I'm currently working at
+        I used to work at
         <a
           href="http://aws.amazon.com"
           target="_blank"
           rel="noopener noreferrer"
           >@aws</a
         >
-        as a backend engineer on their EC2 Networking team. Previously, I was a
-        fullstack developer at
+        as a backend engineer in the Application Networking org for over 2
+        years. Previously, I was a fullstack developer at
         <a
           href="http://gratifypay.com"
           target="_blank"
           rel="noopener noreferrer"
           >@gratifypay</a
+        >. Back in BCIT, I also had the chance to work on two
+        <a
+          href="https://www.bcit.ca/computing-academic-studies/industry-sponsored-student-projects/"
+          target="_blank"
+          rel="noopener noreferrer"
         >
-        developing their consumer and merchant portals. Back in BCIT, I also had
-        the chance to work on two Industry-Sponsored Student Projects.
+          Industry-Sponsored Student Projects</a
+        >. I'm always open for new internship opportunities :D
       </p>
       <div class="my-container companies-spacer">
         <a
@@ -267,8 +291,9 @@
     <section id="skills">
       <span class="heading-2">Skills</span>
       <p>
-        At BCIT, I learnt about all three major paradigms in programming
-        (Object-oriented, Procedural and Functional).
+        At work, I mainly used Kotlin, Java (service code), TypeScript (for
+        CDK), and Python (test code) with a bit of Go. At BCIT, I learnt OCaml
+        in my option.
       </p>
       <span class="heading-4">Programming Languages*</span>
       <div class="my-container">
@@ -287,6 +312,13 @@
           <i class="devicon-javascript-plain colored skills"></i>
         </a>
         <a
+          href="https://kotlinlang.org/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="devicon-kotlin-plain colored skills"></i>
+        </a>
+        <a
           href="https://www.java.com/en/"
           target="_blank"
           rel="noopener noreferrer"
@@ -300,15 +332,15 @@
         >
           <i class="devicon-go-plain colored skills"></i>
         </a>
-        <a href="https://ocaml.org/" target="_blank" rel="noopener noreferrer">
-          <i class="devicon-ocaml-plain colored skills"></i>
-        </a>
         <a
-          href="https://elixir-lang.org/"
+          href="https://www.python.org/"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <i class="devicon-elixir-plain colored skills"></i>
+          <i class="devicon-python-plain colored skills"></i>
+        </a>
+        <a href="https://ocaml.org/" target="_blank" rel="noopener noreferrer">
+          <i class="devicon-ocaml-plain colored skills"></i>
         </a>
       </div>
       <p class="placeholder-text">
@@ -337,13 +369,6 @@
         </a>
         <a href="https://svelte.dev/" target="_blank" rel="noopener noreferrer">
           <i class="devicon-svelte-plain colored skills"></i>
-        </a>
-        <a
-          href="https://www.phoenixframework.org/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="devicon-phoenix-plain colored skills"></i>
         </a>
       </div>
       <span class="heading-4">Databases*</span>
@@ -393,7 +418,9 @@
           target="_blank"
           rel="noopener noreferrer"
         >
-          <i class="devicon-amazonwebservices-original colored skills"></i>
+          <i
+            class="devicon-amazonwebservices-plain-wordmark colored skills"
+          ></i>
         </a>
         <a
           href="https://en.wikipedia.org/wiki/Shell_script"
@@ -401,13 +428,6 @@
           rel="noopener noreferrer"
         >
           <i class="devicon-bash-plain colored skills"></i>
-        </a>
-        <a
-          href="https://www.digitalocean.com/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="devicon-digitalocean-plain colored skills"></i>
         </a>
         <a
           href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"
