fix: cleanup styling on mobile

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         Previously, I also graduated from BCIT (CST - Programming Paradigm
         option) in 2021.
       </p>
-      <div class="my-container companies-spacer">
+      <div class="logo-container companies-spacer">
         <div>
           <a
             href="https://www.sfu.ca/computing.html"
@@ -119,7 +119,7 @@
               alt="Card image cap"
             />
           </a>
-          <p class="placeholder-text">Class of 2027</p>
+          <p class="placeholder-text education-placeholder">Class of 2027</p>
         </div>
         <div>
           <a
@@ -133,7 +133,9 @@
               alt="Card image cap"
             />
           </a>
-          <p class="placeholder-text">Class of 2021 - GPA: 91%</p>
+          <p class="placeholder-text education-placeholder">
+            Class of 2021 - GPA: 91%
+          </p>
         </div>
       </div>
     </section>
@@ -164,7 +166,7 @@
           Industry-Sponsored Student Projects</a
         >. I'm always open for new internship opportunities :D
       </p>
-      <div class="my-container companies-spacer">
+      <div class="logo-container companies-spacer">
         <a
           href="http://aws.amazon.com"
           target="_blank"
@@ -296,7 +298,7 @@
         in my option.
       </p>
       <span class="heading-4">Programming Languages*</span>
-      <div class="my-container">
+      <div class="icon-container">
         <a
           href="https://www.typescriptlang.org/"
           target="_blank"
@@ -349,7 +351,7 @@
         fundementals concepts can help learn different languages faster.
       </p>
       <span class="heading-4">Web Frameworks</span>
-      <div class="my-container">
+      <div class="icon-container">
         <a
           href="https://expressjs.com"
           target="_blank"
@@ -372,7 +374,7 @@
         </a>
       </div>
       <span class="heading-4">Databases*</span>
-      <div class="my-container">
+      <div class="icon-container">
         <a
           href="https://www.postgresql.org/"
           target="_blank"
@@ -412,7 +414,7 @@
         trying to learn different vendors.
       </p>
       <span class="heading-4">Others</span>
-      <div class="my-container">
+      <div class="icon-container">
         <a
           href="http://aws.amazon.com/"
           target="_blank"
