--- a/index.html
+++ b/index.html
@@ -85,10 +85,8 @@
       <span class="heading-4">Hi there 👋</span>
       <p>
         Welcome to my personal website! Here, you can find out about my
-        <a href="#education">education</a>, <a href="#skills">skills</a>,
-        <a href="#hackathons">hackathons</a>, and
-        <a href="#projects">projects</a>. I'm currently purusing my Bachelor of
-        Computer Science at
+        <a href="#education">education</a>, <a href="#experience">work</a>, and
+        more about me. I'm currently purusing my Bachelor of Computer Science at
         <a href="https://www.sfu.ca/" target="_blank" rel="noopener noreferrer"
           >Simon Fraser University</a
         >. Here's my <a href="./resume.pdf">resume</a>.
