feat: lazy loading images

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             rel="noopener noreferrer"
           >
             <img
+              loading="lazy"
               class="thumbnail"
               src="./images/sfu.png"
               alt="Card image cap"
@@ -126,6 +127,7 @@
             rel="noopener noreferrer"
           >
             <img
+              loading="lazy"
               class="thumbnail"
               src="./images/bcit.png"
               alt="Card image cap"
@@ -182,6 +184,7 @@
           class="align-self-center"
         >
           <img
+            loading="lazy"
             src="./images/gratify-logo.svg"
             alt="Gratify Pay's logo"
             class="gratify-logo"
@@ -208,6 +211,7 @@
               rel="noopener noreferrer"
             >
               <img
+                loading="lazy"
                 src="https://raw.githubusercontent.com/scottdlai/sorting-animation/master/assets/website.png"
                 alt="Sorting Animation"
                 class="project"
@@ -238,6 +242,7 @@
               rel="noopener noreferrer"
             >
               <img
+                loading="lazy"
                 src="./images/game-of-life.png"
                 alt="Conway's Game of Life"
                 class="project"
@@ -254,6 +259,7 @@
               rel="noopener noreferrer"
             >
               <img
+                loading="lazy"
                 src="./images/tic-tac-toe.png"
                 alt="Tic Tac Toe bot"
                 class="project"
@@ -279,7 +285,12 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-              <img src="./images/learnIT.png" alt="LearnIT" class="project" />
+              <img
+                loading="lazy"
+                src="./images/learnIT.png"
+                alt="LearnIT"
+                class="project"
+              />
             </a>
             <span class="placeholder-text">Hack The Break hackathon</span>
           </div>
@@ -393,6 +404,7 @@
           rel="noopener noreferrer"
         >
           <img
+            loading="lazy"
             src="./images/dynamodb.svg"
             alt="dynamodb logo"
             class="skills-img"
