feat: change expected graduation date

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -118,7 +118,7 @@
               alt="Card image cap"
             />
           </a>
-          <p class="placeholder-text education-placeholder">Class of 2026</p>
+          <p class="placeholder-text education-placeholder">Class of 2027</p>
         </div>
         <div>
           <a
